composer/modules/js-tests/src/test/resources/passing/tests/ballerina-test/src/test/resources/test-src/services/signature/int-param.bal
import ballerina.net.http;

@http:configuration {basePath:"/signature"}
service<http> echo {
    resource echo1 (http:Connection conn, int key, http:Request req) {
        http:Response res = {};
    }
}
