composer/modules/js-tests/src/test/resources/failing/tests/ballerina-test/src/test/resources/test-src/services/signature/mismatched-body-param.bal
import ballerina.net.http;

@http:configuration {basePath:"/signature"}
service<http> echo {
    @http:resourceConfig {
        methods:["POST"],
        body:"person"
    }
    resource echo1 (http:Connection conn, http:Request req, string key, json ballerina) {
        http:Response res = {};
        _ = conn.respond(res);
    }
}
